--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                             <% users.forEach((user, index) => { %>
                                 <tr class="text-center">
                                     <td><%= index + 1 %></td>
-                                    <td><img src="<%= user.image %>" alt="User Image" width="60" height="60"/></td>
+                                    <td><img src="<%= user.image %>" alt="User Image" width="80" height="80" class="img-fluid"/></td>
                                     <td><%= user.name %></td>
                                     <td><%= user.email %></td>
                                     <td><%= user.phone %></td>
