added a confirmation alert

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,7 +10,6 @@
                 <div class="card-body p-4">
                     <form action="/edit/<%= user._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                         <input type="hidden" name="_method" value="PUT"> <!-- Simulate PUT request -->
-
                         <div class="mb-3">
                             <label for="name" class="fw-bold fs-5">Name</label>
                             <input type="text" name="name" value="<%= user.name %>" class="form-control shadow form-control-lg" required>
@@ -33,7 +32,7 @@
                             <% } %>
                         </div>
                         <div class="text-center">
-                            <button type="submit" class="btn btn-secondary m-2 w-50">Update User</button>
+                            <button type="submit" class="btn btn-secondary m-2 w-50" onclick="return confirm('are you sure you want to edit this account')">Update User</button>
                         </div>
                     </form>
                 </div>
